--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "author": "Dobromir Hristov",
   "license": "MIT",
   "dependencies": {
-    "vue-fullpage.js": "^0.1.5"
+    "fullpage.js": "^3.0.9",
+    "vue-fullpage.js": "^0.1.6"
+  },
+  "devDependencies": {
+    "standard-version": "^9.0.0"
+  },
+  "scripts": {
+    "release": "standard-version"
   }
 }
